--- a/sample/sample03.html
+++ b/sample/sample03.html
@@ -7,15 +7,11 @@
   </head>
   <body>
     <!--
-      First Vue
+      methods
     -->
-    <div id="app">
-      {{ a }}
-    </div>
   </body>
   <script>
-    var app = new Vue({
-      el: '#app',
+    var vm = new Vue({
       data : {
         a: 1
       },
