--- a/sample/sample09.html
+++ b/sample/sample09.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!--
-      First Vue
+      v-show
     -->
     <div id="app-3">
       <p v-show="seen">Now you see me</p>
