update custom events

--- a/sample/sample17.html
+++ b/sample/sample17.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!--
-      slot
+      custom events
     -->
     <div id="counter-event-example">
       <p>{{ total }}</p>
